# study_calib

./: CMakeLists.txt  README.md
run/: run_build2single.sh  run_build2stereo.sh
single_camera/: CMakeLists.txt
single_camera/include/: Camera.hpp  SingleCalibration.hpp
single_camera/src/: main.cpp
stereo_camera/: CMakeLists.txt
stereo_camera/include/: StereoCalibration.hpp
stereo_camera/src/: main.cpp
tools/: CMakeLists.txt  CharucoBoard.hpp
